--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
+    "use-reducer-logger": "^1.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
